added the responsiveness of the search nav

--- a/search.html
+++ b/search.html
@@ -92,7 +92,10 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">John is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
+                    <p class="developer-text">John is a senior front-end developer with 5+ years of experience. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -127,7 +130,10 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Mike is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
+                    <p class="developer-text">Mike is a senior front-end developer with 5+ years of experience. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -162,7 +168,10 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">jane is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
+                    <p class="developer-text">jane is a senior front-end developer with 5+ years of experience. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -197,7 +206,10 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">Susan is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
+                    <p class="developer-text">Susan is a senior front-end developer with 5+ years of experience. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
@@ -232,7 +244,10 @@
                         <li class="developer-list_item yellow-item"> <i class="fa fa-star" aria-hidden="true"></i> 5.0
                             <span class="number">(400)</span></li>
                     </ul>
-                    <p class="developer-text">James is a senior front-end developer with 5+ years of experience. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
+                    <p class="developer-text">James is a senior front-end developer with 5+ years of experience. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur...</p>
                     <div class="developer-skills">
                         <ul class="developer-skills_list">
                             <li class="developer-skills_item">HTML</li>
