Link different pages together

--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
                         <a href="search.html">Browse developers</a>
                     </li>
                     <li class="search-li"><a href="about.html">About Us</a></li>
-                    <li class="search-li"><a href="#">Login</a></li>
+                    <li class="search-li"><a href="login.html">Login</a></li>
                     <li class="search-li signup">
                         <a href="signup.html">Sign Up</a>
                     </li>
