--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <!-- Start Navigation Bar -->
         <header>
             <div class="container">
-                <a class="logo" href="#">
+                <a class="logo" href="index.html">
                     RemDev
                 </a>
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="#">Browse Developers</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#"><button type="button" class="btn-small">Sign Up</button></a></li>
+                        <li><a href="search.html">Browse Developers</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="signup.html"><button type="button" class="btn-small">Sign Up</button></a></li>
                     </ul>
                 </nav>
             </div>
@@ -160,10 +160,10 @@
             <div>
                 <i data-feather="facebook" class="social"></i>
                 <i data-feather="twitter" class="social"></i>
-                <i data-feather="github" class="social"></i> 
+                <i data-feather="github" class="social"></i>
             </div>
         </footer>
         <!-- End Footer -->
-        
+
     </body>
 </html>
