--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   
+
 </head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login Here</title>
@@ -15,9 +15,8 @@
         <ul class="mainnav">
             <li class="link increasefont" href="index.html">RemDev</li>
             <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
-            <li class="sourcefont"><a class="link" href="sourcefont">Browse developers</a></li>
+            <li class="sourcefont"><a class="link" href="search.html">Browse developers</a></li>
             <li class="pushleft sourcefont"><a class="link" href="">About Us</a></li>
-
         </ul>
     </nav>
     <div class="login-page">
@@ -27,7 +26,7 @@
 
                 <input type="email" placeholder="Email Address">
                 <input type="password" placeholder="Password">
-      
+
                 <a href="#"><button>Log in</button></a>
               <p class="forgotpsw"><a class="login" href="forgotpsw.html">Forgot password</a></p>
                 <p class="message">New here?  <a class="login" href="Create Account.html">Create Account</a></p>
