Make landing page responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <!-- Start Section "Hire the best remote dev..." -->
             <div class="hero">
-                <div class="search">
+                <div class="search sub-div">
                     <h1 class="hire">Hire the best remote developers across Nigeria</h1>
                     <p class="hero-offer">Get your projects completed in no time by capable hands</p>
                     <input type="text" placeholder="What skills are you looking for?" class="search-bar"><br>
@@ -46,8 +46,8 @@
                     </div>
                   <a href=#><button type="button" class="btn-large register">Register as a developer</button></a>
                 </div>
-                <div class="vector-file">
-                  <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567250811/rem-dev%20homepage/software_dev_zh9apf.png">
+                <div class="vector-file sub-div">
+                  <p><img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567250811/rem-dev%20homepage/software_dev_zh9apf.png"></p>
                 </div>
             </div>
             <!-- End Section "Hire the best remote dev..." -->
@@ -141,7 +141,7 @@
                 </div>
                 <div>
                     <input type="text" placeholder="What skills are you looking for?" class="search-bar-footer">
-                    <div>
+                    <div class="conclude">
                         <a href="#"><button type="button" class="btn-medium register">Register as Developer</button></a>
                         or
                         <a href="#"><button type="button" class="btn-medium find">Find Developers</button></a>
