--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                         <p>Search for the developer of your choice based on the skillsets you want</p>
                     </div>
                     <div class="create-icon-tab i-tab">
-                        <div class="create-icon"></div>
+                        <div class="create-icon">https://res.cloudinary.com/dpkreativ/image/upload/v1567742368/rem-dev%20homepage/clips-01_xpcia0.svg</div>
                         <h3>Create project</h3>
                         <p>Create a project from your dashboard and share with a developer</p>
                     </div>
                     <div class="payment-icon-tab i-tab">
-                            <div class="payment-icon"></div>
+                            <div class="payment-icon">https://res.cloudinary.com/dpkreativ/image/upload/v1567742368/rem-dev%20homepage/clips-02_uivups.svg</div>
                             <h3>Make payment</h3>
                             <p>After developer accepts project proceed to make payment</p>
                     </div>
                     <div class="build-icon-tab i-tab">
-                            <div class="build-icon"></div>
+                            <div class="build-icon">https://res.cloudinary.com/dpkreativ/image/upload/v1567742369/rem-dev%20homepage/clips-03_qccu4g.svg</div>
                             <h3>Build Project</h3>
                             <p>Get in touch with the developer and sit tight while you get updates</p>
                     </div>
