Added break tag
Added break tags to the "or" in between the buttons at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 <div>
                     <input type="text" placeholder="What skills are you looking for?" class="search-bar-footer">
                     <div class="conclude">
-                        <a href="#"><button type="button" class="btn-medium register">Register as Developer</button></a>
-                        or
+                        <a href="#"><button type="button" class="btn-medium register">Register as Developer</button></a><br>
+                        or<br>
                         <a href="#"><button type="button" class="btn-medium find">Find Developers</button></a>
                     </div>
                 </div>
