Added a little js to animate the hamburger menu

--- a/index.html
+++ b/index.html
@@ -169,4 +169,14 @@
         <!-- End Footer -->
 
     </body>
+    <script>
+        function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+    </script>
 </html>
