modified about to contain the new team page's directory

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 				<h3>Values</h3>
 				<p>Commitment (Put a design above this and the other values too). We are committed to making a positive difference in our client's lives. Teamwork: We work together across boundaries to meet the needs of our clients whilst helping our company grow. Passion: We are passionate and always ready to get the job done!</p>
 			</section>
-			<a class="team-link" href="team.html">Meet our team</a>
+			<a class="team-link" href="backend/team.php">Meet our team</a>
 		</div>
 	</div>
 </body>
