Add hide link functionality

--- a/index.html
+++ b/index.html
@@ -167,7 +167,16 @@
             </div>
         </footer>
         <!-- End Footer -->
-
+         <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+    </script>
     </body>
     <script>
 </html>
