--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://unpkg.com/feather-icons"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    </head>
     </head>
     <body>
         <!-- Start Navigation Bar -->
@@ -26,7 +27,7 @@
                     </ul>
                 </nav>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars"></i>
                 </a>
             </div>
         </header>
