--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                 </nav>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fas fa-bars"></i>
+                    <i class="fa fa-bars"></i>
                 </a>
             </div>
         </header>
