Change icon class name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="signup.html"><button type="button" class="btn-small">Sign Up</button></a></li>
                     </ul>
                 </nav>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="link-icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
