Edited Index, team, login, about, and search html files

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <body>
     <nav class="mainzone">
         <ul class="mainnav">
@@ -27,9 +28,9 @@
                 <input type="email" placeholder="Email Address">
                 <input type="password" placeholder="Password">
 
-                <a href="#"><button>Log in</button></a>
+                <a href="login.php"><button>Log in</button></a>
               <p class="forgotpsw"><a class="login" href="forgotpsw.html">Forgot password</a></p>
-                <p class="message">New here?  <a class="login" href="Create Account.html">Create Account</a></p>
+                <p class="message">New here?  <a class="login" href="signup.html">Create Account</a></p>
             </form>
         </div>
     </div>
