--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                 <input type="email" placeholder="Email Address">
                 <input type="password" placeholder="Password">
                 <input type="password" placeholder="Repeat password">
-                <a href="#"><button>Create account</button></a>
+                <a href="signup.php"><button>Create account</button></a>
                 <p class="message">Already have an account? <a class="login" href="login.html">Log In</a></p>
             </form>
         </div>
