--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
             <div class="search-right">
                 <ul class="search-ul">
                     <li class="search-li">
-                        <a href="search.html">Browse developers</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li class="search-li"><a href="about.html">About Us</a></li>
                     <li class="search-li"><a href="login.html">Login</a></li>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="search-header_secondary">
                     <input class="header-inp" type="text" placeholder="What skills are you looking for?">
-                    <button class="header-btn">Find Developers</button>
+                    <a href="backend/search.php"><button class="header-btn">Find Developers</button></a>
                 </div>
             </div>
         </section>
@@ -58,13 +58,13 @@
                             <option value="canada">canada</option>
                         </select>
                     </div>
-                    <div class="filter-1 shift-left">
+                    <div class="filter-1">
                         <select class="input-icon" name="country" id="">
                             <option value="$15/hr">$15/hr</option>
                             <option value="$20/hr">$20/hr</option>
                         </select>
                     </div>
-                    <div class="filter-1 shift-left">
+                    <div class="filter-1">
                         <select name="country" id="">
                             <option value="Front-end...">Front-end...</option>
                             <option value="Back-end...">Back-end...</option>
