--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="logo" href="index.html">
                     RemDev
                 </a>
-                <nav>
+                <nav id="myLinks">
                     <ul class="nav-links">
                         <li><a href="search.html"> <b>Find Developers</b> </a></li>
                         <li><a href="about.html"> <b>About Us</b> </a></li>
