added navigation button for the header links

--- a/search.html
+++ b/search.html
@@ -21,7 +21,22 @@
             <div>
                 <h3><a class="link increasefont" href="index.html">RemDev</a></h3>
             </div>
-            <div class="search-right">
+            <div class="navigation">
+                <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+                <label for="navi-toggle" class="navigation__button">
+                    <span class="navigation__icon"></span>
+                </label>
+                <div class="navigation__background">&nbsp;</div>
+                <nav class="navigation__nav">
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><a href="index.html" class="navigation__link">Home</a></li>
+                        <li class="navigation__item"><a href="about.html" class="navigation__link">About Us</a></li>
+                        <li class="navigation__item"><a href="login.html" class="navigation__link">Login</a></li>
+                        <li class="navigation__item"><a href="signup.html" class="navigation__link">Sign Up</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- <div class="search-right">
                 <ul class="search-ul">
                     <li class="search-li">
                         <a href="index.html">Home</a>
@@ -32,7 +47,7 @@
                         <a href="signup.html">Sign Up</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </nav>
         <hr class="hr" />
         <section class="search-section">
@@ -58,13 +73,13 @@
                             <option value="canada">canada</option>
                         </select>
                     </div>
-                    <div class="filter-1">
+                    <div class="filter-1 shift-left">
                         <select class="input-icon" name="country" id="">
                             <option value="$15/hr">$15/hr</option>
                             <option value="$20/hr">$20/hr</option>
                         </select>
                     </div>
-                    <div class="filter-1">
+                    <div class="filter-1 shift-left">
                         <select name="country" id="">
                             <option value="Front-end...">Front-end...</option>
                             <option value="Back-end...">Back-end...</option>
